--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     <script src='./2_js/2_graphics_2d/html5_sprites/sprite_c.js'></script>     
     <script src='./2_js/2_graphics_2d/html5_sprites/html5_sprites_collection.js'></script>
 
+    <!-- 3_user_control -->
+    <script src='./2_js/3_user_control/html5_canvas_mouse.js'></script>
+
+    <script src='./2_js/frames.js'></script>
+    <script src='./2_js/drow_timer_number.js'></script>   
     <script src='./2_js/game2d.js'></script>  
      <!-- 1_index -->
     <script src='./2_js/1_index/index.js'></script>
